--- a/index.html
+++ b/index.html
@@ -67,17 +67,17 @@
     <h1>HTM CSS JS</h1>
     <div class="container">
         <div class="item item1">
-            <div><img src="/image/sandwich.jpg" alt=""></div>
+            <div><img src="./image/sandwich.jpg" alt=""></div>
             <h2>The Perfect Sandwich, A Real NYC Classic</h2>
             <p>Just some random text, lorem ipsum text praesent tincidunt ipsum lipsum.</p>
         </div>
         <div class="item item2"> 
-            <div><img src="/image/steak.jpg" alt=""></div>
+            <div><img src="./image/steak.jpg" alt=""></div>
             <h2>Let Me Tell You About This Steak</h2>
             <p>Once again, some random text to lorem lorem lorem lorem ipsum text praesent tincidunt ipsum lipsum.</p>
         </div>
         <div class="item item3">
-            <div><img src="/image/cherries.jpg" alt=""></div>            
+            <div><img src="./image/cherries.jpg" alt=""></div>            
             <h2>Cherries, interrupted</h2>
             <p>Lorem ipsum text praesent tincidunt ipsum lipsum.
                 What else?</p>
